2004-12-22 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* redhat/quagga.sysconfig: Define some variables to support watchquagga.

2004-12-22 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* configure.ac: Add a define for DAEMON_VTY_DIR in config.h.

2004-12-22 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* {configure.ac,Makefile.am}: Build watchquagga by default.

2004-12-21 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* NEWS: Note addition of watchquagga.
	* HACKING: Note that watchquagga is in testing phase.

2004-12-21 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* watchquagga: New watchquagga daemon.

2004-12-21 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* redhat/Makefile.am: Added watchquagga.init to EXTRA_DIST.

2004-12-21 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* redhat/watchquagga.init: New file, init script for watchquagga.

2004-12-03 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* HACKING: Indicate that header files should be consulted for
	  documentation, particularly logging levels in lib/log.h.

2004-11-24 Paul Jakma <paul@dishone.st>

	* TODO: Add source routing, zebra filtering and lib/ documenting.

2004-11-19 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* global: Replace strerror with safe_strerror.  And vtysh/vtysh.c
	  needs to include "log.h" to pick up the declaration.

2004-11-19 Hasso Tepper <hasso at quagga.net>

	* configure.ac: Avoid regeneration of doc/quagga.info for now.

2004-11-17 Paul Jakma <paul@dishone.st>

	* INSTALL.quagga.txt: texinfo version corrected, so section on
          that 4.7-x being unknown is not needed.

2004-11-12 Paul Jakma <paul@dishone.st>

	* configure.ac: Fix AC_CONFIG_FILES, the chmod seems to run for
          every input file, should be only be for vtysh/extract.pl, so that
	  should be a seperate AC_CONFIG_FILES.
	* INSTALL: update-autotools, autoreconf -i will install this, remove
	  the file so it always matches the autoconf which created