@@ -1,5 +1,11 @@
 2004-12-22 Andrew J. Schorr <ajschorr@alumni.princeton.edu>
 
+	* redhat/quagga.spec.in: Add watchquagga, and fix some other
+	  logic to make sure that all daemons are restarted on upgrades
+	  and stopped on package removal.
+
+2004-12-22 Andrew J. Schorr <ajschorr@alumni.princeton.edu>
+
 	* redhat/quagga.sysconfig: Define some variables to support watchquagga.
 
 2004-12-22 Andrew J. Schorr <ajschorr@alumni.princeton.edu>
